--- a/Breakout in Javascript/styles.css
+++ b/Breakout in Javascript/styles.css
@@ -26,4 +26,7 @@
 body {
   text-align: center;
   background-image: url(./images/retroBackground.png);
+  width:100%;
+  min-width:1000px;
+  height:auto;
 }
